--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,13 +32,14 @@ thiserror = "2.0.18"
 dotenvy = "0.15.7"
 futures = "0.3.31"
 moka = { version = "0.12", features = ["future"] }
-pyo3 = { version = "0.27.2" }
-pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
+pyo3 = { version = "0.27.2", optional = true }
+pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"], optional = true }
 tokio = { version = "1.49.0", features = ["full"] }
 
 [features]
-default = ["extension-module"]
-extension-module = ["pyo3/extension-module"]
+default = ["python", "extension-module"]
+python = ["dep:pyo3", "dep:pyo3-async-runtimes"]
+extension-module = ["python", "pyo3/extension-module"]
 
 [dev-dependencies]
 tokio-test = "0.4.5"
